force-app/main/default/objects/Sprint_Element__c/Sprint_Element__c.object-meta.xml
<CustomObject>
    <label>Sprint Element</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sprint Element Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>