force-app/main/default/objects/Sprint_Element__c/fields/Label_Choices__c.field-meta.xml
<CustomField>
    <fullName>Label_Choices__c</fullName>
    <formula>Sprint__r.Name  &amp; &apos; : &apos; &amp;  Task_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label Choices</label>
    <type>Text</type>
</CustomField>