force-app/main/default/objects/Sprint_Element__c/fields/Parent_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Date__c</fullName>
    <formula>Sprint__r.Sprint_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Date</label>
    <type>Date</type>
</CustomField>